# tech-knowledge-base

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  GEMINI.md  README.md  TURBOREPO.md  WRITING_GUIDELINES.md  api-proxy-server.js  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  pyproject.toml  turbo.json  wrangler.toml  项目整体架构.md
.claude/: settings.local.json
.cursor/rules/: base.mdc  style.mdc
.github/workflows/: main.yml
.trae/documents/: 将清理从卸载改为“报告ID变更事件”驱动.md  报告详情：全文生成前的解析状态提示实现方案.md  撰写 Issue：注水改为队列的可行性与改造方案.md  移除 ReportDetail Context 与 Hook 依赖，改为直接使用 agentMsg.md
apps/ai-chat/: .cursorrules  .eslintrc-auto-import.json  .prettierignore  index.html  package.json  pr_to_master.sh  pr_to_master_simple.sh  tsconfig.json  vitest.workspace.ts
apps/company/: .prettierrc  cdnconfig.js  eslint.config.mjs  jest.config.mjs  merge_svn.bat  package.json
apps/report-ai/: .env.example  .gitignore  .prettierrc  postinstall.cjs  vite.config.ts  vitest.config.ts
apps/report-preview/: .env.example  eslint.config.js  package.json  tsconfig.node.json  vite.config.ts
apps/report-print/: .env.example  .prettierignore  architecture.md  eslint.config.js  jest.config.js  jest.setup.js  server.js  (+2 more)
carrier/: README.md  background.md  plan.md
docs/: README.md  architecture.md  development.md  writing-guidelines.md
meta/: career-vault.md  development.md  prompt.md  writing-guidelines.md
resume/: resume.md
scripts/: README.md  build-and-deploy.js  deploy-utils.js  deploy.js  jsonSort.cjs  local-ci.js  process-area-json.js  run-app.js
(+5931 files in other folders)
